Renamed ProjectObject to ProjectTreeRow